--- a/github.yml
+++ b/github.yml
@@ -1,43 +1,43 @@
 components:
-  - repo_name: CDECatapult/copyright-hub-accounts-srv
+  - repo_name: openpermissions/accounts-srv
     s3_location: copyrighthub-artifacts/services/accounts
     url_prod: https://acc.copyrighthub.org
     url_stage: https://acc-stage.copyrighthub.org
-  - repo_name: CDECatapult/copyright-hub-authentication-srv
-    s3_location: copyrighthub-artifacts/services/authentication
+  - repo_name: openpermissions/auth-srv
+    s3_location: copyrighthub-artifacts/services/auth
     url_prod: https://auth.copyrighthub.org
     url_stage: https://auth-stage.copyrighthub.org
-  - repo_name: CDECatapult/copyright-hub-identity-srv
+  - repo_name: openpermissions/identity-srv
     s3_location: copyrighthub-artifacts/services/identity
     url_prod: https://id.copyrighthub.org
     url_stage: https://id-stage.copyrighthub.org
-  - repo_name: CDECatapult/copyright-hub-index-srv
+  - repo_name: openpermissions/index-srv
     s3_location: copyrighthub-artifacts/services/index
     url_prod: https://index.copyrighthub.org
     url_stage: https://index-stage.copyrighthub.org
-  - repo_name: CDECatapult/copyright-hub-onboarding-srv
+  - repo_name: openpermissions/onboarding-srv
     s3_location: copyrighthub-artifacts/services/onboarding
     url_prod: https://on.copyrighthub.org
     url_stage: https://on-stage.copyrighthub.org
-  - repo_name: CDECatapult/copyright-hub-query-srv
+  - repo_name: openpermissions/query-srv
     s3_location: copyrighthub-artifacts/services/query
     url_prod: https://query.copyrighthub.org
     url_stage: https://query-stage.copyrighthub.org
-  - repo_name: CDECatapult/copyright-hub-repository-srv
+  - repo_name: openpermissions/repository-srv
     s3_location: copyrighthub-artifacts/services/repository
     url_prod: https://repo.copyrighthub.org
     url_stage: https://repo-stage.copyrighthub.org
-  - repo_name: CDECatapult/copyright-hub-resolution-srv
+  - repo_name: openpermissions/resolution-srv
     s3_location: copyrighthub-artifacts/services/resolution
-  - repo_name: CDECatapult/copyright-hub-template-srv
+  - repo_name: openpermissions/template-srv
     s3_location: copyrighthub-artifacts/services/template
-  - repo_name: CDECatapult/copyright-hub-transformation-srv
+  - repo_name: openpermissions/transformation-srv
     s3_location: copyrighthub-artifacts/services/transformation
     url_prod: https://tran.copyrighthub.org
     url_stage: https://tran-stage.copyrighthub.org
-  - repo_name: CDECatapult/copyright-hub-support-docs
+  - repo_name: openpermissions/support-docs
     s3_location: copyrighthub-artifacts/documents/support
-  - repo_name: CDECatapult/copyright-hub-api
+  - repo_name: openpermissions/api-test-suite
     s3_location: copyrighthub-artifacts/tests/api
   - repo_name: CDECatapult/copyright-hub-manifest
     s3_location: copyrighthub-artifacts/platform
@@ -48,13 +48,17 @@ manifest:
 
 data_services:
   - name: Blazegraph (Index)
-    url_stage: http://ec2-52-49-144-64.eu-west-1.compute.amazonaws.com:8080/bigdata
+    url_stage: http://ec2-52-50-221-29.eu-west-1.compute.amazonaws.com:8080/bigdata
+    url_prod: http://ec2-54-72-2-193.eu-west-1.compute.amazonaws.com:8080/bigdata
   - name: Blazegraph (Repository)
-    url_stage: http://ec2-52-50-239-239.eu-west-1.compute.amazonaws.com:8080/bigdata
+    url_stage: http://ec2-52-16-11-155.eu-west-1.compute.amazonaws.com:8080/bigdata
+    url_prod: http://ec2-52-50-60-105.eu-west-1.compute.amazonaws.com:8080/bigdata
   - name: CouchDB
-    url_stage: http://ec2-52-50-237-25.eu-west-1.compute.amazonaws.com:5984/
+    url_stage: http://ec2-52-51-70-28.eu-west-1.compute.amazonaws.com:5984/
+    url_prod: http://ec2-54-72-10-209.eu-west-1.compute.amazonaws.com:5984/
   - name: Karma
-    url_stage: http://ec2-52-18-159-208.eu-west-1.compute.amazonaws.com:9999
+    url_stage: http://ec2-52-51-62-1.eu-west-1.compute.amazonaws.com:9999
+    url_prod: http://ec2-54-72-11-6.eu-west-1.compute.amazonaws.com:9999
 
 refresh: 5m
 
