--- a/github.yml
+++ b/github.yml
@@ -2,31 +2,31 @@ components:
   - repo_name: openpermissions/accounts-srv
     s3_location: copyrighthub-artifacts/services/accounts
     url_prod: https://acc.copyrighthub.org
-    url_stage: https://acc-stage.copyrighthub.org
+    url_stage: https://stage.copyrighthub.org/v1/accounts
   - repo_name: openpermissions/auth-srv
     s3_location: copyrighthub-artifacts/services/auth
     url_prod: https://auth.copyrighthub.org
-    url_stage: https://auth-stage.copyrighthub.org
+    url_stage: https://stage.copyrighthub.org/v1/auth
   - repo_name: openpermissions/identity-srv
     s3_location: copyrighthub-artifacts/services/identity
     url_prod: https://id.copyrighthub.org
-    url_stage: https://id-stage.copyrighthub.org
+    url_stage: https://stage.copyrighthub.org/v1/identity
   - repo_name: openpermissions/index-srv
     s3_location: copyrighthub-artifacts/services/index
     url_prod: https://index.copyrighthub.org
-    url_stage: https://index-stage.copyrighthub.org
+    url_stage: https://stage.copyrighthub.org/v1/index
   - repo_name: openpermissions/onboarding-srv
     s3_location: copyrighthub-artifacts/services/onboarding
     url_prod: https://on.copyrighthub.org
-    url_stage: https://on-stage.copyrighthub.org
+    url_stage: https://stage.copyrighthub.org/v1/onboarding
   - repo_name: openpermissions/query-srv
     s3_location: copyrighthub-artifacts/services/query
     url_prod: https://query.copyrighthub.org
-    url_stage: https://query-stage.copyrighthub.org
+    url_stage: https://stage.copyrighthub.org/v1/query
   - repo_name: openpermissions/repository-srv
     s3_location: copyrighthub-artifacts/services/repository
     url_prod: https://repo.copyrighthub.org
-    url_stage: https://repo-stage.copyrighthub.org
+    url_stage: https://stage.copyrighthub.org/v1/repository
   - repo_name: openpermissions/resolution-srv
     s3_location: copyrighthub-artifacts/services/resolution
   - repo_name: openpermissions/template-srv
@@ -34,7 +34,7 @@ components:
   - repo_name: openpermissions/transformation-srv
     s3_location: copyrighthub-artifacts/services/transformation
     url_prod: https://tran.copyrighthub.org
-    url_stage: https://tran-stage.copyrighthub.org
+    url_stage: https://stage.copyrighthub.org/v1/transformation
   - repo_name: openpermissions/support-docs
     s3_location: copyrighthub-artifacts/documents/support
   - repo_name: openpermissions/api-test-suite
